app/assets/stylesheets/application-responsive.css.scss
@media (max-width: 374px) {
  nav.navbar-inner a.btn-navbar {
    display: none;
  }
}

@media (max-width: 767px) {
  ol, ul { margin-left: 0; }

  .full-width {
    margin-left: -$gridGutterWidth;
    margin-right: -$gridGutterWidth;
    padding-left: $gridGutterWidth;
    padding-right: $gridGutterWidth;

    > .overlay {
      margin-left: -$gridGutterWidth;
      margin-right: -$gridGutterWidth;

      > .container {
        padding-left: $gridGutterWidth;
        padding-right: $gridGutterWidth;
      }
    }
  }

  nav.navbar-inner {
    a.btn-navbar {
      margin-top: 25px;
    }
  }

  .affix {
    position: relative;
    top: auto !important;
    left: auto !important;
  }

  ul.breadcrumb { display: none; }
  .main-content { padding-top: 0; }

  h1 { font-size: 30px; line-height: 34px; }
  h2 { font-size: 24px; line-height: 28px; }
  h3 { font-size: 20px; line-height: 25px; }

  h1, h2, h3, h4, h5, h6 { margin: 6px 0; }
  body, li { font-size: 14px; line-height: 18px; }

  div.full-play-controls {
    // Together these have the intended effect of keeping share-episode to a single line.
    li.tw { max-width: 90px; overflow: hidden; }
    li.fb { margin-left: -8px; }

    .status { min-height: 18px; }
  }

  #home .current-episode .overlay, #home .splash-logo { padding-top: 0; }

  .page-header {
    .logo { display: none; }
    .details.offset2 { position: static; margin-left: 0; }
  }

  nav.navbar-inner a.brand {
    background-image: image-url("flamingswordmed.png");
    background-color: transparent;
    &:hover { background-color: transparent; }
  }

  .entity-image > .thumbnail {
    position: static;
  }

  .btn-large {
    padding: 7px 14px;
    font-size: 16px;
    border-radius: 4px;

    > i {
      font-size: 18px;
    }
  }

  input[type='text'], input[type='email'] {
    &.input-large { font-size: 16px; }
  }

  body#episodes.alt {
    #wrap {
      margin-top: 10px;
      > .container {
        padding-top: 0;
        border-radius: 0;
      }
    }

    div.header {
      margin-bottom: 10px;
    }

    .host .media {
      img { float: left; }
      .media-heading { line-height: 50px; }
    }
  }

  .modal {
    .modal-body {
      .step { margin-top: 0; }
      .intro .buttons { margin-top: 80px; }
    }
  }

  .vertical-gap-phone { margin-bottom: 10px; }

  input[type='text'], input[type='email'] {
    &.input-large.input-block-level { height: 38px; }
  }
}

@media (min-width: 768px) and (max-width: 979px) {
  nav.navbar-inner a.brand {
    background-image: image-url("flamingswordmed.png");
    background-color: transparent;
    &:hover { background-color: transparent; }
  }

  h1 { font-size: 36px; line-height: 40px; }
  h2 { font-size: 30px; line-height: 34px; }

  .header-content .page-header {
    margin-top: 0;
    .logo { display: none; }
    .details.offset2 { margin-left: 0; }
    > .span12 ul.breadcrumb {
      position: relative;
    }
  }

  .subscribe-join-social {
    .subscribe { a.itunes { background-position: 225% 50%; i { right: -20px; } } }
    .sign-up a.submit { font-size: 20px; }
    .share .twitter .follow { margin-left: -20px; }
  }
}

